# pipecmd

./: .gitignore  README.md  pyproject.toml  todo.md
src/pipecmd/: __init__.py  command.py  helpers.py  runner.py  types.py
test/: test_check.py  test_command.py  test_redirect.py  test_runner.py
